--- a/scss/style.scss
+++ b/scss/style.scss
@@ -274,7 +274,7 @@ header {
 	top: 0;
 	right: 0;
 	background: $color-5;
-	padding: 0 5% 1em;
+	padding: 30px 5% 1em;
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
 	z-index: 1;
