--- a/templates/email/registrant.html
+++ b/templates/email/registrant.html
@@ -1,5 +1,5 @@
 {% if form is defined %}
-  <h3>Hi, you have filled out a {{ form.name }} on {{ siteName }}. Below is your submission details.</h3>
+  <h3>Hi, you have filled out a {{ form.name }} on {{ siteName }}. Bellow is your submission details.</h3>
 {% endif %}
 <hr>
 {% if data is defined %}
