--- a/templates/entries/index.html
+++ b/templates/entries/index.html
@@ -6,7 +6,7 @@
 {% set elementType = "FormBuilder" %}
 
 {% set extraPageHeaderHtml %}
-  {% include 'formbuilder/_includes/header.html' %}
+  {% include 'formbuilder/header.html' %}
 {% endset %}
 
 {% block sidebar %}
