--- a/templates/entries/_view.html
+++ b/templates/entries/_view.html
@@ -5,7 +5,7 @@
 {% set selectedTab = '' %}
 
 {% set extraPageHeaderHtml %}
-  {% include 'formbuilder/header.html' %}
+  {% include 'formbuilder/header' %}
 {% endset %}
 
 {% set content %}
