add validation library

--- a/templates/fields/plainText.twig
+++ b/templates/fields/plainText.twig
@@ -14,6 +14,12 @@
         );
     #}
 
+    {% set validation = settings.validation|default("text") %}
+    {% set inputType = validation %}
+    {% if validation == "alpha" or validation == "alphanum" %}
+        {% set inputType = "text" %}
+    {% endif %}
+
     {% set placeholder = "" %}
     {% set required = "" %}
 
@@ -30,9 +36,9 @@
     {% endif %}
 
     {% if field.settings.multiline %}
-        <textarea name="{{ field.handle }}" {{ placeholder }}{{ required }}id="{{ settings.id }}" class="{{ settings.class }}" ></textarea>
+        <textarea name="{{ field.handle }}" data-parsley-type="{{ validation }}" {{ placeholder }}{{ required }}id="{{ settings.id }}" class="{{ settings.class }}" ></textarea>
     {% else %}
-        <input name="{{ field.handle }}" type="text" {{ placeholder }}{{ required }}id="{{ settings.id }}" class="{{ settings.class }}" />
+        <input name="{{ field.handle }}" data-parsley-type="{{ validation }}" type="{{ inputType }}" {{ placeholder }}{{ required }}id="{{ settings.id }}" class="{{ settings.class }}" />
     {% endif %}
 
 {% endspaceless %}
