--- a/templates/fields/plainText.twig
+++ b/templates/fields/plainText.twig
@@ -10,7 +10,9 @@
             "checked" => false,
             "selected" => false,
             "required" => $fieldLayoutField->required,
-            "placeholder" => false
+            "placeholder" => false,
+            "validation" => $validationType,
+            "error" => $error
         );
     #}
 
